# util

./: CMakeLists.txt  README.md  cvtest.cpp  input.txt
calibration/: Calib_hrt.py
distance_measure/: readFocal.py  saveVideos.py  shootImgs.py  walker.py  walker_v2.py
hist_compare_match/: CMakeLists.txt  cvMatch.cpp
knn/: knn.py
post-process/: gray.tif  test.py  v1_1_unchangedSrc.py  v1_2_borderAdded.py  v1_3_oneToEnd.py  v1_4_米ToEnd.py  v1_5_castPts.py  v1_6_1_test米OnSegImgs.py  v1_7_oneToEndEdge.py  v1_8_setRadAvoidLeak.py  v1_9_growthPathHistogram.py  v2_1_binaryGrowth.py  v2_2_draft1_errLogic.py  v2_3_draft2_singlePt_oneBinary_plot.py  v2_4_draft3_singlePt_twoBinary_plot.py  v2_5_draft4_manyPts_twoBinary_finalBlue.py  v2_6_draft5_manyPts_oneBinary_onRealImg.py  v3_1_.py
post-process/sentenceSegment/: oneDirectionTillEdge.py
